[gd_scene load_steps=11 format=2]

[ext_resource path="res://GameParts/Dudes/JumpingJeffrey/JumpingJeffrey.gd" type="Script" id=1]
[ext_resource path="res://GameParts/BubbleText/BubbleTextGenerator.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameParts/Dudes/Shadow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/frag.png" type="Texture" id=4]
[ext_resource path="res://Resources/Audio/GDC2018/Breaths,Male,Exhale,Ghost,Evil,Hostile,Snarl,1.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.5895
height = 25.7216

[sub_resource type="Animation" id=2]
resource_name = "animate"
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1.3, 1.6 ),
"transitions": PoolRealArray( 1, 2, 1, -0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 15 ), Vector2( 0, 15 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1.1, 1.6 ),
"transitions": PoolRealArray( 1, 2, 1, -0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.4 ), Vector2( 1, 0.4 ), Vector2( 0.75, 1.7 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "move"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:gravity_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, -0.5, -2, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -60.0, 100.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "anim"
length = 0.7
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath("BubbleTextGenerator")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Z", Vector2( 18, -12 ), 1 ],
"method": "addBubble"
} ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 34.4287
height = 1.30477

[sub_resource type="CircleShape2D" id=5]
radius = 350.0

[node name="JumpingJeffrey" type="RigidBody2D"]
collision_layer = 0
collision_mask = 86
mass = 20.0
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="BubbleTextGenerator" parent="." instance=ExtResource( 2 )]

[node name="Shadow" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 17.1418 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 18 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="TimerBored" type="Timer" parent="."]
wait_time = 3.0

[node name="Jump" type="AnimationPlayer" parent="."]
anims/animate = SubResource( 2 )

[node name="Sleep" type="AnimationPlayer" parent="."]
anims/anim = SubResource( 3 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 0.894882 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource( 5 )

[node name="outlet" type="Position2D" parent="."]
position = Vector2( 0, 16.2858 )

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.9
bus = "Effects"
[connection signal="timeout" from="TimerBored" to="." method="_on_TimerBored_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="AggroRange" to="." method="_on_AggroRange_body_entered"]
[connection signal="finished" from="Death" to="." method="_on_Death_finished"]
